--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @font-face {
   font-family: "W95FA";
   src: url("./assets/W95FA/W95FA.otf");
-  src: url("./assets/W95FA/w95fa.woff") format("woff");
+  src: 
+    url("./assets/W95FA/w95fa.woff2") format("woff2"),
+    url("./assets/W95FA/w95fa.woff") format("woff");
 }
 
 * {
@@ -12,8 +14,6 @@
 
 table {
   border-spacing: 0px;
-  /* border: '0'; */
-  /* border-collapse: collapse; */
 }
 
 .window {
@@ -23,7 +23,7 @@ table {
   border-width: var(--border-width);
   border-style: solid;
   image-rendering: pixelated;
-  border-image-source: url(./assets/border.png);
+  border-image-source: url(./assets/borders/border.png);
   border-image-slice: 2 fill;
 }
 
@@ -46,7 +46,6 @@ body {
 
 .introduction-body {
   height: var(--height);
-  /* text-align: center; */
 }
 
 .centered-div {
@@ -87,7 +86,7 @@ body {
 .inner-cross {
   border-width: var(--border-width);
   border-style: solid;
-  border-image-source: url(./assets/border-dock.png);
+  border-image-source: url(./assets/borders/border-dock.png);
   border-image-slice: 2 fill;
 }
 
@@ -158,7 +157,7 @@ body {
   border-top-width: var(--border-width);
   border-top-style: solid;
   image-rendering: pixelated;
-  border-image-source: url(./assets/border-dockbar.png);
+  border-image-source: url(./assets/borders/border-dockbar.png);
   border-image-slice: 2 fill;
 }
 
@@ -181,7 +180,7 @@ body {
   height: var(--window-height);
   border-style: solid;
   image-rendering: pixelated;
-  border-image-source: url(./assets/border-dock.png);
+  border-image-source: url(./assets/borders/border-dock.png);
   border-image-slice: 2 fill;
 }
 
