--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body {
   --cross-height: 5px;
   --cross-width: 5px;
   --border-width: 2px;
-  --half-border-width: 1px;
   --max-width: 1000px;
   --target-padding: 10px;
   background-color: #57A8A8;
@@ -78,7 +77,7 @@ body {
   width: 8px;
   height: 7px;
   border-width: var(--border-width);
-  border-top-width: var(--half-border-width);
+  border-top-width: calc(var(--border-width) / 2);
   border-style: solid;
   border-color: transparent;
 }
@@ -150,6 +149,7 @@ body {
 
 .doc-bar {
   --window-height: 1.2em;
+  --app-width: 150px;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -170,13 +170,28 @@ body {
   border-color: transparent;
 }
 
+.start-app {
+  gap: var(--border-width);
+  margin-right: calc(2 * var(--border-width));
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  border-width: var(--border-width);
+  width: auto;
+  height: var(--window-height);
+  border-style: solid;
+  image-rendering: pixelated;
+  border-image-source: url(./assets/borders/border-dock.png);
+  border-image-slice: 2 fill;
+}
+
 .doc-app {
   gap: var(--border-width);
   align-items: center;
   display: flex;
   flex-direction: row;
   border-width: var(--border-width);
-  width: auto;
+  width: var(--app-width);
   height: var(--window-height);
   border-style: solid;
   image-rendering: pixelated;
