--- a/css/main.css
+++ b/css/main.css
@@ -2,19 +2,37 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    --inline-picture-size: 0.8em;
+    --long-dash-length: calc(var(--inline-picture-size) * 11 / 7);
 }
 
-.contacts-list {
+.list {
     display: flex;
     flex-direction: column;
     gap: 0.2em;
     padding: 1em;
 }
 
-.contacts-bullet {
-    width: 0.8em;
-    height: 0.8em;
+.inline-dash {
+    width: var(--inline-picture-size);
+    height: calc(var(--inline-picture-size) * 3 / 7);
     align-self: center;
+}
+
+.vertical-dash {
+    width: var(--long-dash-length);
+    height: calc(var(--inline-picture-size) * 3 / 7);
+    align-self: start;
+    transform: rotate(90deg);
+    margin-left: calc((var(--long-dash-length) - var(--inline-picture-size)) * -0.5);
+    margin-top: calc(var(--long-dash-length) * (-1 / 8));
+}
+
+.contacts-bullet {
+    width: var(--inline-picture-size);
+    height: var(--inline-picture-size);
+    align-self: center;
+    z-index: 1;
 }
 
 .side-data {
@@ -35,5 +53,29 @@
 
 .list-item {
     display: flex;
-    width: min-content;
+    width: max-content;
+}
+
+.list-item2 {
+    display: flex;
+    width: max-content;
+    margin-left: calc(var(--inline-picture-size) * 2);
+}
+
+.list-item-nested {
+    display: flex;
+    width: max-content;
+    margin-left: calc(var(--long-dash-length) * -0.463);
+}
+
+.list-item-nested-root {
+    display: flex;
+    width: max-content;
+    margin-left: calc(var(--inline-picture-size) * -0.463);
+}
+
+.list-item-root {
+    display: flex;
+    width: max-content;
+    margin-left: calc((var(--long-dash-length) + var(--inline-picture-size)) * -0.5);
 }
