--- a/css/windows.css
+++ b/css/windows.css
@@ -1,10 +1,13 @@
-.window {
-    width: 100%;
+table[class$="window"] {
     border-width: var(--border-width);
     border-style: solid;
     image-rendering: pixelated;
     border-image-source: url(./../assets/borders/border.png);
     border-image-slice: 2 fill;
+}
+
+.window {
+    width: 100%;
 }
 
 .text-window {
@@ -13,27 +16,16 @@
     image-rendering: pixelated;
     border-image-source: url(./../assets/borders/border-text.png);
     border-image-slice: 2 fill;
-    margin: 0px;
 }
 
 .min-window {
     width: min-content;
     height: min-content;
-    border-width: var(--border-width);
-    border-style: solid;
-    image-rendering: pixelated;
-    border-image-source: url(./../assets/borders/border.png);
-    border-image-slice: 2 fill;
 }
 
 .minh-window {
     width: 100%;
     height: min-content;
-    border-width: var(--border-width);
-    border-style: solid;
-    image-rendering: pixelated;
-    border-image-source: url(./../assets/borders/border.png);
-    border-image-slice: 2 fill;
 }
 
 .window-icon {
@@ -43,6 +35,7 @@
     border-width: var(--border-width);
     border-style: solid;
     border-color: transparent;
+    user-select: none;
 }
 
 .window-header {
@@ -66,6 +59,8 @@
     position:absolute;
     width: var(--cross-width);
     height: var(--cross-height);
+    content: url("../assets/icons/cross.svg");
+    user-select: none;
 }
 
 .cross-base {
