--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,13 @@ img[class|="list-bullet"] {
 img[class|="list-bullet-collapsible"] {
     cursor: pointer;
     content: url("../assets/icons/minus.svg");
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .side-data {
