--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     src: 
         url("./../assets/W95FA/w95fa.woff2") format("woff2"),
         url("./../assets/W95FA/w95fa.woff") format("woff");
+    font-display: swap;
+}
+
+html {
+    touch-action: manipulation;
 }
 
 * {
@@ -27,6 +32,7 @@ body {
 .desktop {
     padding: var(--target-padding);
     max-width: var(--max-width);
+    min-width: max-content;
     margin: auto;
     margin-bottom: calc(var(--header-height) + var(--target-padding));
     display: flex;
