--- a/css/header.css
+++ b/css/header.css
@@ -2,17 +2,13 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    --photo-width: 180px;
-    --photo-height: 240px;
+    --photo-height: 239px;
 }
 
-.cell-image {
-    background-image: url('./../assets/photo.png');
-    background-size: cover;
-    display: flex;
+.profile-photo {
     height: var(--photo-height);
-    width: var(--photo-width);
     image-rendering: pixelated;
+    margin-bottom: calc(var(--border-width) * -1.4);
 }
 
 .introduction-centered {
