--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
 
 html {
     touch-action: manipulation;
-    --min-width: calc(720px);
+    --min-width: 720px;
+    --max-width: 1000px;
     image-rendering: pixelated;
 }
 
@@ -24,7 +25,6 @@ body {
     --cross-height: 5px;
     --cross-width: 5px;
     --border-width: 2px;
-    --max-width: 1000px;
     --target-padding: 10px;
     --header-height: calc(var(--font-size) * 1.2);
     background-color: #57A8A8;
@@ -39,4 +39,14 @@ body {
     margin-bottom: calc(var(--header-height) + var(--target-padding));
     display: flex;
     flex-direction: column;
+}
+
+@media print {
+    .hidden-print {
+      display: none !important;
+    }
+
+    body {
+        background-color: transparent;
+    }
 }
