--- a/css/footer.css
+++ b/css/footer.css
@@ -90,6 +90,82 @@ div[class=doc-app-container] > label:last-child {
 }
 
 .doc-name {
+    display: none;
+}
+.doc-app > div[class|=doc-name]:nth-of-type(1) {
+    display: block;
     margin-top: calc(var(--header-height) * 0.2);
     margin-right: var(--border-width);
+}
+
+@media (max-width: 730px) {
+    div[class=doc-app-container] > label[for=contacts] {
+        display: none;
+    }
+}
+
+@media (max-width: 610px) {
+    .doc-name {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(1) {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(2) {
+        display: block;
+        margin-top: calc(var(--header-height) * 0.2);
+        margin-right: var(--border-width);
+    }
+    .doc-name {
+        display: none;
+    }
+
+    div[class=doc-app-container] > label[for=contacts] {
+        display: none;
+    }
+}
+
+@media (max-width: 520px) {
+    .doc-name {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(1) {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(2) {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(3) {
+        display: block;
+        margin-top: calc(var(--header-height) * 0.2);
+        margin-right: var(--border-width);
+    }
+
+    div[class=doc-app-container] > label[for=contacts] {
+        display: none;
+    }
+}
+
+@media (max-width: 435px) {
+    .doc-name {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(1) {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(2) {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(3) {
+        display: none;
+    }
+    .doc-app > div[class|=doc-name]:nth-of-type(4) {
+        display: block;
+        margin-top: calc(var(--header-height) * 0.2);
+        margin-right: var(--border-width);
+    }
+
+    div[class=doc-app-container] > label[for=contacts] {
+        display: none;
+    }
 }
