--- a/css/header.css
+++ b/css/header.css
@@ -11,11 +11,11 @@
 }
 
 .introduction-centered {
-    --padding: 1em;
+    --padding: max(var(--target-padding), 4px);
     display: flex;
     flex-direction: column;
     width: min-content;
-    height: calc(100% + var(--padding) * -2);
+    height: calc(100% + var(--target-padding) * -2);
     margin: auto;
     justify-content: center;
     padding: var(--padding);
@@ -23,4 +23,32 @@
 
 .text-window-height {
     height: calc(var(--photo-height) - var(--border-width) * 2);
+}
+
+.introduction-text {
+    display: flex;
+    flex-direction: column;
+    gap: calc(var(--inline-picture-size) * 3 / 7);
+    padding-top: var(--initial-target-padding);
+    padding-bottom: var(--initial-target-padding);
+    padding-left: 0;
+    padding-right: 0;
+    --default-long-dash-margin-top: calc(var(--long-dash-length) * (-1.5 / 9));
+}
+
+div[class^="contacts-mobile"] {
+    display: flex;
+    width: max-content;
+    height: var(--inline-picture-size);
+    align-items: center;    
+}
+
+div[class^="contacts-mobile"] > *:not(img) {
+    margin-top: calc(var(--inline-picture-size) * 0.1);
+}
+
+@media (min-width: 730px) {
+    div[class^="contacts-mobile"] {
+        display: none;
+    }
 }
