--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 html {
     touch-action: manipulation;
-    --min-width: 720px;
+    --min-width: 401px;
     --max-width: 1000px;
     image-rendering: pixelated;
 }
@@ -18,6 +18,7 @@ html {
     margin: 0;
     padding: 0;
     --font-size: 1em;
+    --inline-picture-size: 0.8em;
     /* outline: red dashed 1px; */
 }
 
@@ -25,7 +26,8 @@ body {
     --cross-height: 5px;
     --cross-width: 5px;
     --border-width: 2px;
-    --target-padding: 10px;
+    --initial-target-padding: 10px;
+    --target-padding: var(--initial-target-padding);
     --header-height: calc(var(--font-size) * 1.2);
     background-color: #57A8A8;
     font-family: 'W95FA';
@@ -36,17 +38,30 @@ body {
     max-width: var(--max-width);
     min-width: max-content;
     margin: auto;
-    margin-bottom: calc(var(--header-height) + var(--target-padding));
+    margin-bottom: calc(var(--header-height) + var(--initial-target-padding));
     display: flex;
     flex-direction: column;
 }
 
+@media (max-width: 431px) {
+    body {
+        --target-padding: max(calc(9px - (431px - 100vw) / 3.75), 1px);
+    }
+}
+
 @media print {
     .hidden-print {
-      display: none !important;
+        display: none !important;
+    }
+
+    a {
+        color: #000000;
+        cursor: text;
+        text-decoration: none;
     }
 
     body {
         background-color: transparent;
+        zoom: 75%;
     }
 }
